# cscene

./: .gitignore  Makefile.am  README.md  configure.ac
include/cscene/: Makefile.am  version.h.in
include/cscene/gui/gtk/: scene.h
lib/: Makefile.am  version.c
lib/gui/gtk/: scene-click.c  scene-click.h  scene-drag.c  scene-drag.h  scene-private.h  scene-scale.c  scene-scale.h  scene.c
src/: Makefile.am  main-gtk4.c
tests/: Makefile.am  test_version.cpp
utils/: ResolveDeps.sh
